--- a/package.json
+++ b/package.json
@@ -2,5 +2,22 @@
   "name": "express-ts",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "tsc": "tsc",
+    "dev": "nodemon -w ./src/*.ts -e ts-node ./src/index.ts",
+    "build": "tsc -p ."
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.11.5",
+    "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
+  }
 }
