--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev": "nodemon -w ./src/*.ts -e ts-node ./src/index.ts",
+    "dev": "nodemon ./src/index.ts",
     "build": "tsc -p ."
   },
   "dependencies": {
