--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.5",
     "body-parser": "^1.19.0",
