--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/node": "^14.11.5",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "inversify": "^5.0.1",
+    "inversify-express-utils": "^6.3.2",
     "nodemon": "^2.0.4",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
