--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "nodemon ./src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "eslint ./src/**/*.ts --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -15,8 +21,16 @@
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.5",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "husky": "^4.3.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
     "nodemon": "^2.0.4",
