--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "comma-dangle": "off",
     "no-unused-vars": "off",
     "space-before-function-paren": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "@typescript-eslint/explicit-function-return-type": "error"
   }
 }
