--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev": "nodemon ./src/index.ts",
+    "dev": "nodemon -r dotenv/config ./src/index.ts",
     "build": "tsc -p .",
     "lint": "eslint ./src/**/*.ts --fix"
   },
@@ -15,6 +15,7 @@
     }
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
