--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
-version: "2"
+version: "3"
 services:
   app-api:
     container_name: app-api
     restart: always
     build: .
+    env_file: .env
     ports:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - node_modules:/usr/src/app/node_modules
     links:
       - app-db
     depends_on:
       - app-db
     networks:
-      - db-network
+      - app-network
   app-db:
     container_name: app-db
     image: mongo
     volumes:
-      - ./data:/data/db
+      - dbdata:/data/db
     ports:
       - "27017:27017"
     networks:
-      - db-network
+      - app-network
 
 networks:
-  db-network:
+  app-network:
     driver: bridge
+
+volumes:
+  dbdata:
+  node_modules:
