--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     env_file: .env
     ports:
-      - "3000:3000"
+      - "$SERVER_PORT:$SERVER_PORT"
     volumes:
       - .:/usr/src/app
       - node_modules:/usr/src/app/node_modules
@@ -21,8 +21,14 @@ services:
     image: mongo
     volumes:
       - dbdata:/data/db
+      - ./docker_scripts/:/docker-entrypoint-initdb.d
     ports:
-      - "27017:27017"
+      - "$MONGO_PORT:$MONGO_PORT"
+    environment:
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_PORT: ${MONGO_PORT}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     networks:
       - app-network
 
