--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     }
   },
   "dependencies": {
+    "@types/mongoose": "^5.10.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.13"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.41",
