--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,18 @@
     "no-unused-vars": "off",
     "space-before-function-paren": "off",
     "no-useless-constructor": "off",
-    "@typescript-eslint/explicit-function-return-type": "error"
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "eslint-no-use-before-defining": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ]
   }
 }
