--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev": "nodemon -r dotenv/config ./src/index.ts",
+    "dev": "yarn install && nodemon -r dotenv/config ./src/index.ts",
     "build": "tsc -p .",
     "lint": "eslint ./src/**/*.ts --fix"
   },
@@ -15,19 +15,19 @@
     }
   },
   "dependencies": {
-    "@types/mongoose": "^5.10.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.10.0",
     "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
@@ -38,6 +38,7 @@
     "inversify-express-utils": "^6.3.2",
     "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.13",
+    "ts-mongoose": "^0.0.21",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
