--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
