--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.13"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.13",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.41",
@@ -25,6 +29,7 @@
     "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
