error handling middleware

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
     "quotes": ["warn", "double", { "avoidEscape": true }],
     "comma-dangle": "off",
     "no-unused-vars": "off",
+    "no-trailing-spaces": "off",
+    "no-multiple-empty-lines": "off",
+    "padded-blocks": "off",
     "space-before-function-paren": "off",
     "no-useless-constructor": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
