--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.10.0",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.11.5",
+    "@types/passport": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "bcrypt": "^5.0.0",
@@ -43,6 +46,7 @@
     "husky": "^4.3.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-mongoose": "^0.0.21",
