--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
