--- a/package.json
+++ b/package.json
@@ -17,26 +17,20 @@
   "dependencies": {
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^5.10.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.10.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.11.5",
-    "@types/passport": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
