--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^4.3.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
+    "mongoose-hidden": "^1.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.13",
