--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.10.0",
     "@types/morgan": "^1.9.2",
@@ -29,6 +30,7 @@
     "@typescript-eslint/parser": "^4.7.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
