--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.11.5",
