--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "googleapis": "^64.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "axios": "^0.21.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.8",
