--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev": "yarn install && nodemon -r dotenv/config ./src/index.ts",
+    "dev": "nodemon",
     "build": "tsc -p .",
     "lint": "eslint ./src/**/*.ts --fix"
   },
@@ -15,11 +15,11 @@
     }
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "googleapis": "^64.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13",
-    "axios": "^0.21.0"
+    "mongoose": "^5.10.13"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -53,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-mongoose": "^0.0.21",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   }
 }
