--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev": "nodemon",
+    "dev": "yarn install && ts-node-dev --ignore-watch ./node_modules --transpile-only --respawn -r dotenv/config ./src/index.ts",
     "build": "tsc -p .",
     "lint": "eslint ./src/**/*.ts --fix"
   },
@@ -49,10 +49,8 @@
     "inversify-express-utils": "^6.3.2",
     "mongoose-hidden": "^1.9.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-mongoose": "^0.0.21",
-    "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   }
