--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "semi": ["warn", "always"],
-    "quotes": ["warn", "single", { "avoidEscape": true }],
+    "quotes": ["warn", "double", { "avoidEscape": true }],
     "comma-dangle": "off",
     "no-unused-vars": "off",
     "no-trailing-spaces": "off",
