--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "dev": "yarn install && ts-node-dev --ignore-watch ./node_modules --transpile-only --respawn -r dotenv/config ./src/index.ts",
     "build": "tsc -p .",
-    "lint": "eslint --fix ./src/**/*.ts"
+    "lint": "eslint --fix ./src/**/*.ts",
+    "prod": "tsc && node -r dotenv/config ./dist/index.js"
   },
   "husky": {
     "hooks": {
