--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn lint"
+      "pre-push": "yarn build && yarn lint"
     }
   },
   "dependencies": {
