--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     }
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "googleapis": "^64.0.0",
@@ -39,6 +40,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
@@ -48,6 +50,8 @@
     "husky": "^4.3.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "mongoose-hidden": "^1.9.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
