--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
