--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose-hidden": "^1.9.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
+    "sib-api-v3-sdk": "^8.0.2",
     "ts-mongoose": "^0.0.21",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
